@@ -1,16 +1,13 @@
 package uk.gov.hmcts.reform.fpl.service.docmosis;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.reform.fpl.enums.GeneratedOrderSubtype;
-import uk.gov.hmcts.reform.fpl.enums.GeneratedOrderType;
 import uk.gov.hmcts.reform.fpl.enums.OrderStatus;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.CaseData.CaseDataBuilder;
@@ -21,8 +18,9 @@ import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisGeneratedOrder;
 import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisGeneratedOrder.DocmosisGeneratedOrderBuilder;
 import uk.gov.hmcts.reform.fpl.model.order.generated.FurtherDirections;
 import uk.gov.hmcts.reform.fpl.model.order.generated.InterimEndDate;
-import uk.gov.hmcts.reform.fpl.model.order.selector.ChildSelector;
+import uk.gov.hmcts.reform.fpl.model.order.selector.Selector;
 import uk.gov.hmcts.reform.fpl.service.CaseDataExtractionService;
+import uk.gov.hmcts.reform.fpl.service.ChildrenService;
 import uk.gov.hmcts.reform.fpl.service.HearingVenueLookUpService;
 import uk.gov.hmcts.reform.fpl.service.config.LookupTestConfig;
 import uk.gov.hmcts.reform.fpl.utils.FixedTimeConfiguration;
@@ -30,8 +28,8 @@ import uk.gov.hmcts.reform.fpl.utils.FixedTimeConfiguration;
 import java.time.LocalDateTime;
 import java.time.format.FormatStyle;
 import java.util.List;
-import java.util.stream.Stream;
 
+import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.hmcts.reform.fpl.enums.GeneratedOrderSubtype.FINAL;
 import static uk.gov.hmcts.reform.fpl.enums.GeneratedOrderSubtype.INTERIM;
@@ -47,41 +45,38 @@ import static uk.gov.hmcts.reform.fpl.utils.DateFormatterHelper.getDayOfMonthSuf
 @ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {SupervisionOrderGenerationService.class, CaseDataExtractionService.class,
     LookupTestConfig.class, HearingVenueLookUpService.class, JacksonAutoConfiguration.class,
-    FixedTimeConfiguration.class})
+    FixedTimeConfiguration.class, ChildrenService.class})
 class SupervisionOrderGenerationServiceTest extends AbstractOrderGenerationServiceTest {
 
     @Autowired
     private SupervisionOrderGenerationService service;
 
     @ParameterizedTest
-    @MethodSource("docmosisDataGenerationSource")
-    void shouldGetTemplateDataWhenGivenPopulatedCaseData(GeneratedOrderType type,
-        GeneratedOrderSubtype subtype) {
+    @EnumSource(GeneratedOrderSubtype.class)
+    void shouldGetTemplateDataWhenGivenPopulatedCaseData(GeneratedOrderSubtype subtype) {
         OrderStatus orderStatus = SEALED;
-        CaseData caseData = createPopulatedCaseData(subtype, orderStatus);
+        CaseData caseData = getCase(subtype, orderStatus);
 
         DocmosisGeneratedOrder templateData = service.getTemplateData(caseData);
 
-        DocmosisGeneratedOrder expectedData = createExpectedDocmosisData(type, subtype, orderStatus);
+        DocmosisGeneratedOrder expectedData = getExpectedDocument(subtype, orderStatus);
         assertThat(templateData).isEqualToComparingFieldByField(expectedData);
     }
 
     @ParameterizedTest
-    @MethodSource("docmosisDataGenerationSource")
-    void shouldGetTemplateDataWhenGivenPopulatedCaseDataInDraft(GeneratedOrderType type,
-        GeneratedOrderSubtype subtype) {
+    @EnumSource(GeneratedOrderSubtype.class)
+    void shouldGetTemplateDataWhenGivenPopulatedCaseDataInDraft(GeneratedOrderSubtype subtype) {
         OrderStatus orderStatus = DRAFT;
-        CaseData caseData = createPopulatedCaseData(subtype, orderStatus);
+        CaseData caseData = getCase(subtype, orderStatus);
 
         DocmosisGeneratedOrder templateData = service.getTemplateData(caseData);
 
-        DocmosisGeneratedOrder expectedData = createExpectedDocmosisData(type, subtype, orderStatus);
+        DocmosisGeneratedOrder expectedData = getExpectedDocument(subtype, orderStatus);
         assertThat(templateData).isEqualToComparingFieldByField(expectedData);
     }
 
-    @Override
-    CaseDataBuilder populateCustomCaseData(GeneratedOrderSubtype subtype) {
-        CaseDataBuilder caseDataBuilder = CaseData.builder()
+    CaseData getCase(GeneratedOrderSubtype subtype, OrderStatus orderStatus) {
+        CaseDataBuilder caseDataBuilder = defaultCaseData(subtype, orderStatus)
             .orderTypeAndDocument(OrderTypeAndDocument.builder()
                 .type(SUPERVISION_ORDER)
                 .subtype(subtype)
@@ -93,7 +88,7 @@ class SupervisionOrderGenerationServiceTest extends AbstractOrderGenerationServi
                 .build())
             .orderMonths(5)
             .orderAppliesToAllChildren(NO.getValue())
-            .childSelector(ChildSelector.builder()
+            .childSelector(Selector.builder()
                 .selected(List.of(0))
                 .build());
 
@@ -103,50 +98,42 @@ class SupervisionOrderGenerationServiceTest extends AbstractOrderGenerationServi
                 .endDate(time.now().toLocalDate())
                 .build());
         }
-        return caseDataBuilder;
+        return caseDataBuilder.build();
     }
 
-    @SuppressWarnings("rawtypes")
-    @Override
-    DocmosisGeneratedOrderBuilder populateCustomOrderFields(GeneratedOrderSubtype subtype) {
+    private DocmosisGeneratedOrder getExpectedDocument(GeneratedOrderSubtype subtype, OrderStatus orderStatus) {
         String formattedDate = formatLocalDateToString(time.now().toLocalDate(), FormatStyle.LONG);
 
-        ImmutableList<DocmosisChild> children = ImmutableList.of(
+        List<DocmosisChild> children = List.of(
             DocmosisChild.builder()
                 .name("Timmy Jones")
                 .gender("Boy")
                 .dateOfBirth(formattedDate).build());
 
-        DocmosisGeneratedOrderBuilder<?,?> orderBuilder = DocmosisGeneratedOrder.builder();
+        DocmosisGeneratedOrderBuilder orderBuilder = DocmosisGeneratedOrder.builder().children(children);
+
         if (subtype == INTERIM) {
             String detailsDate = formatLocalDateToString(
                 time.now().toLocalDate(), "d'" + getDayOfMonthSuffix(time.now().toLocalDate().getDayOfMonth())
                     + "' MMMM y");
 
-            orderBuilder = createOrderBuilder("Interim supervision order",
-                "Section 38 and Paragraphs 1 and 2 Schedule 3 Children Act 1989",
-                String.format("It is ordered that Example Local Authority supervises"
-                    + " the child until 11:59pm on the %s.", detailsDate), children);
+            orderBuilder
+                .orderTitle("Interim supervision order")
+                .childrenAct("Section 38 and Paragraphs 1 and 2 Schedule 3 Children Act 1989")
+                .orderDetails(format("It is ordered that Example Local Authority supervises"
+                    + " the child until 11:59pm on the %s.", detailsDate));
         } else if (subtype == FINAL) {
             LocalDateTime expiryDate = time.now().plusMonths(5);
             final String formattedDateTime = formatLocalDateTimeBaseUsingFormat(expiryDate,
                 "h:mma 'on the' d'" + getDayOfMonthSuffix(expiryDate.getDayOfMonth()) + "' MMMM y");
 
-            orderBuilder = createOrderBuilder("Supervision order",
-                "Section 31 and Paragraphs 1 and 2 Schedule 3 Children Act 1989",
-                String.format("It is ordered that Example Local Authority supervises the child for 5 months "
-                    + "from the date of this order until %s.", formattedDateTime), children);
+            orderBuilder
+                .orderTitle("Supervision order")
+                .childrenAct("Section 31 and Paragraphs 1 and 2 Schedule 3 Children Act 1989")
+                .orderDetails(format("It is ordered that Example Local Authority supervises the child for 5 months "
+                    + "from the date of this order until %s.", formattedDateTime));
         }
-        return orderBuilder
-            .orderType(SUPERVISION_ORDER);
+        return enrichWithStandardData(SUPERVISION_ORDER, orderStatus, orderBuilder).build();
     }
-
-    private static Stream<Arguments> docmosisDataGenerationSource() {
-        return Stream.of(
-            Arguments.of(SUPERVISION_ORDER, INTERIM),
-            Arguments.of(SUPERVISION_ORDER, FINAL)
-        );
-    }
-
 
 }
